make sure the top menu is always right aligned

--- a/plugins/Zeitgeist/stylesheets/ui/_header.less
+++ b/plugins/Zeitgeist/stylesheets/ui/_header.less
@@ -42,7 +42,7 @@
 #topLeftBar,
 #topRightBar {
   margin-bottom: 4px;
-  float: left;
+  float: right;
 }
 
 #topLeftBar {
